# Advanced_RAG_project

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  streamlit_app.py
data/: urls.json
final_documents/: final_chunks.txt  final_documents.txt  web_chunks.txt  web_documents.txt
ingested_documents/: ingested_chunks.json  ingested_docs.json
qdrant_db/: meta.json
qdrant_db/collection/my_collection/: storage.sqlite
sql/: schema.sql
src/config/: config.py
src/document_ingestion/: document_loader.py  document_processor.py  ingestion_pipeline.py
src/exception/: exception.py
src/graph_builder/: graph_builder.py
src/node/: node.py
src/state/: state.py
src/utils/: summarization.py  utils.py
src/vectorstore/: vectorstore.py
