[project]
name = "advanced-rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asyncpg>=0.31.0",
    "crawl4ai>=0.7.7",
    "docling>=2.63.0",
    "docling-core>=2.52.0",
    "fastembed>=0.7.4",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-core>=1.1.0",
    "langchain-groq>=1.0.1",
    "langchain-openai>=1.0.3",
    "langchain-postgres>=0.0.16",
    "langchain-qdrant>=1.1.0",
    "langgraph>=1.0.3",
    "openai-whisper>=20250625",
    "playwright>=1.56.0",
    "python-dotenv>=1.2.1",
    "qdrant-client>=1.16.1",
    "rank-bm25>=0.2.2",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "streamlit>=1.52.0",
    "transformers>=4.57.1",
]
